@@ -5,10 +5,12 @@ Changelog
 1.0.20 (unreleased)
 -------------------
 
+- Fixes inability to reserve a group reservation. Closes #124.
+  [href]
+
 - Fixes a major Heisenbug occurring in testing using the latest SQLAlchemy
   release.
   [href]
-  
 
 
 1.0.19 (2014-02-05)
